# cpp_study_demos

./: .gitignore  README.md
FunctionCallDemo/: ExchangeParams.cpp  bind1st_bind2nd_Test.cpp  bind1st_bind2st_Test.cpp  bindFuncTest.cpp
callLibDemo/: CMakelists.txt
callLibDemo/app/: CMakeLists.txt  main.cpp
callLibDemo/app/include/: func.h
callLibDemo/app/src/: func.cpp
classDemo/: MySharePtr.cpp  classOverrideTest.cpp  classStrategyTest.cpp
commonDemo/: castDemo.cpp  castDemo2.cpp  crash_gdb.cpp
constuctorDemo/: ConstuctDemo1.cpp
designModeDemo/: singleton.cpp
eigenDemos/: eigen_test.cpp
fucntionPointerDemo/: func_test.cpp
gslDemos/: CMakelists.txt  gsl_line_MoM.cpp  gsl_test.cpp  gsl_test_gauss_pickpoints.cpp
multiThreadDemo/: init_resource_call_once.cpp  parallel_add_vector.cpp  promise_test_child_to_parent.cpp  promise_test_parent_to_child.cpp  simd_add.cpp  test_condition_variable.cpp  test_omp.cpp  test_read_writevector.cpp  test_thread_pool.cpp  test_thread_safe_queue.cpp  test_vec.cpp  thread_identify.cpp  thread_pool.cpp  thread_pool.h  thread_pool_use_wrapper.cpp  thread_pool_use_wrapper.h  thread_safe_queue.h
pointersDemo/: c++共享指针.md  share_pointer_use.cpp
smallTest/: main.cpp  test_macro.cpp  test_variable_life.cpp  test_variable_life.h  test_variable_life2.cpp
strategyDemo/: CMakelists.txt  classStrategyTest.cpp  classStrategyTest2.cpp
templateDemo/: ArbitaryParams.cpp  ArbitaryParams2.cpp  MySet.cpp  templateClass.cpp  templateClass.h  test.cpp
testDemo/: class_filed_address_test.cpp  class_test.cpp  friend_test.cpp  (+4 more)
(+18 files in other folders)
